--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "devDependencies": {
+    "@arco-design/web-vue": "^2.55.1",
+    "@types/blueimp-md5": "^2.18.2",
+    "unplugin-vue-components": "^0.26.0",
     "vitepress": "^1.1.0"
   },
   "scripts": {
-    "docs:dev": "vitepress dev",
+    "docs:dev": "vitepress dev --host",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
+  },
+  "dependencies": {
+    "blueimp-md5": "^2.19.0",
+    "dayjs": "^1.11.10"
   }
 }
