--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "@arco-design/web-vue": "^2.55.1",
+    "@arco-plugins/vite-vue": "^1.4.5",
     "@types/blueimp-md5": "^2.18.2",
+    "sass": "^1.75.0",
     "unplugin-vue-components": "^0.26.0",
     "vitepress": "^1.1.0"
   },
@@ -11,7 +13,9 @@
     "docs:preview": "vitepress preview"
   },
   "dependencies": {
+    "@mdit-vue/shared": "^2.1.2",
     "blueimp-md5": "^2.19.0",
-    "dayjs": "^1.11.10"
+    "dayjs": "^1.11.10",
+    "gray-matter": "^4.0.3"
   }
 }
