--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,15 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "node"
-    }
-}
+      "outDir": "dist",
+      "target": "esnext",
+      "module": "esnext",
+      "moduleResolution": "node",
+      "esModuleInterop": true,
+      "resolveJsonModule": true,
+      "allowJs": true,
+      "strict": true,
+      "jsx": "preserve"
+    },
+    "include": ["env.d.ts", "**/.vitepress/**/*"]
+  }
+  
