--- a/.github/workflows/algolia.yml
+++ b/.github/workflows/algolia.yml
@@ -1,25 +1,28 @@
-name: algolia
+name: Algolia Publish
+
 on:
   push:
     branches:
       - gh-pages
+permissions:
+  contents: write
 
 jobs:
   algolia:
     runs-on: ubuntu-latest
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v4
-          with: 
-            persist-credentials: false
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with: 
+          persist-credentials: false
 
-        - name: Get the content of algolia.json as config
-          id: algolia_config
-          run: echo "config=$(cat crawlerConfig.json | jq -r tostring)" >> $GITHUB_OUTPUT
+      - name: Get the content of algolia.json as config
+        id: algolia_config
+        run: echo "config=$(cat crawlerConfig.json | jq -r tostring)" >> $GITHUB_OUTPUT
 
-        - name: Push indices to Algolia
-          uses: signcl/docsearch-scraper-action@master
-          env:
-              APPLICATION_ID: ${{ secrets.ALGOLIA_APP_ID }}
-              API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
-              CONFIG: ${{ steps.algolia_config.outputs.config }}
+      - name: Push indices to Algolia
+        uses: signcl/docsearch-scraper-action@master
+        env:
+            APPLICATION_ID: ${{ secrets.ALGOLIA_APP_ID }}
+            API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
+            CONFIG: ${{ steps.algolia_config.outputs.config }}
