--- a/.github/workflows/algolia.yml
+++ b/.github/workflows/algolia.yml
@@ -21,8 +21,8 @@ jobs:
         run: echo "config=$(cat crawlerConfig.json | jq -r tostring)" >> $GITHUB_OUTPUT
 
       - name: Push indices to Algolia
-        uses: signcl/docsearch-scraper-action@master
+        uses: darrenjennings/algolia-docsearch-action@master
         env:
-            APPLICATION_ID: ${{ secrets.ALGOLIA_APP_ID }}
-            API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
-            CONFIG: ${{ steps.algolia_config.outputs.config }}
+            algolia_application_id: ${{ secrets.ALGOLIA_APP_ID }}
+            algolia_api_key: ${{ secrets.ALGOLIA_API_KEY }}
+            file: 'crawlerConfig.json'
