--- a/.github/workflows/algolia.yml
+++ b/.github/workflows/algolia.yml
@@ -16,13 +16,10 @@ jobs:
         with: 
           persist-credentials: false
 
-      - name: Get the content of algolia.json as config
-        id: algolia_config
-        run: echo "config=$(cat crawlerConfig.json | jq -r tostring)" >> $GITHUB_OUTPUT
-
       - name: Push indices to Algolia
-        uses: darrenjennings/algolia-docsearch-action@master
+        uses: guzhongren/algolia-docsearch-upload-action@v2.0.0
         env:
-            algolia_application_id: ${{ secrets.ALGOLIA_APP_ID }}
-            algolia_api_key: ${{ secrets.ALGOLIA_API_KEY }}
-            file: 'crawlerConfig.json'
+            APPLICATION_ID: ${{ secrets.ALGOLIA_APP_ID }}
+            ADMIN_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
+            FILE_PATH: 'crawlerConfig.json'
+            INDEX_NAME: "index.zh-cn"
