--- a/.github/workflows/algolia.yml
+++ b/.github/workflows/algolia.yml
@@ -13,13 +13,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with: 
-          persist-credentials: false
 
       - name: Push indices to Algolia
         uses: guzhongren/algolia-docsearch-upload-action@v2.0.0
         env:
             APPLICATION_ID: ${{ secrets.ALGOLIA_APP_ID }}
             ADMIN_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
-            FILE_PATH: 'crawlerConfig.json'
+            FILE_PATH: './crawlerConfig.json'
             INDEX_NAME: "search"
