--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,14 @@ on:
       - 'pages/**'
       - 'package.json'
       - '.vitepress/**'
+
 permissions: 
   contents: write
 
 env:
   TZ: Asia/Shanghai
-  VITE_GISCUS_REPO_ID: ${{ secrets.ACCESS_TOKEN }}
-  VITE_GISCUS_CATEGORY_ID: ${{ secrets.ACCESS_TOKEN }}
+  VITE_GISCUS_REPO_ID: ${{ secrets.VITE_GISCUS_REPO_ID }}
+  VITE_GISCUS_CATEGORY_ID: ${{ secrets.VITE_GISCUS_CATEGORY_ID }}
 
 jobs:
   build:
