--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           cache: 'npm'
 
       - name: Build
-        run: npm i && npm run docs:build-github
+        run: npm i && npm run docs:build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
