--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          REPOSITORY_NAME: yqchilde/yy-notes
+          REPOSITORY_NAME: yqchilde/yqchilde.github.io
           BRANCH: gh-pages
           FOLDER: dist
 
@@ -51,9 +51,10 @@ jobs:
       - name: Algolia Crawler Automatic Crawl
         uses: algolia/algoliasearch-crawler-github-actions@v1.1.0
         env:
+          github-token: ${{ secrets.ACCESS_TOKEN }}
+          crawler-name: 'yqqy'
           crawler-user-id: ${{ secrets.CRAWLER_USER_ID }}
           crawler-api-key: ${{ secrets.CRAWLER_API_KEY }}
-          crawler-name: 'yqqy'
           algolia-app-id: ${{ secrets.ALGOLIA_APP_ID }}
           algolia-api-key: ${{ secrets.ALGOLIA_API_KEY }}
           site-url: 'https://yqqy.top'
