--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,5 +56,5 @@ jobs:
           crawler-user-id: ${{ secrets.CRAWLER_USER_ID }}
           crawler-api-key: ${{ secrets.CRAWLER_API_KEY }}
           algolia-app-id: ${{ secrets.ALGOLIA_APP_ID }}
-          algolia-api-key: ${{ secrets.ALGOLIA_API_KEY }}
+          algolia-api-key: ${{ secrets.ALGOLIA_SEARCH_API_KEY }}
           site-url: 'https://yqqy.top'
