--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "blueimp-md5": "^2.19.0",
     "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3"
+  },
+  "overrides": {
+    "@antv/g-base": "0.5.11",
+    "@antv/path-util": "2.0.15",
+    "@antv/attr": "0.3.5"
   }
 }
