--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
-    "compilerOptions": {
-      "outDir": "dist",
-      "target": "esnext",
-      "module": "esnext",
-      "moduleResolution": "node",
-      "esModuleInterop": true,
-      "resolveJsonModule": true,
-      "allowJs": true,
-      "strict": true,
-      "jsx": "preserve"
-    },
-    "include": ["env.d.ts", "**/.vitepress/**/*"]
-  }
-  
+  "compilerOptions": {
+    "outDir": "dist",
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "strict": true,
+    "jsx": "preserve"
+  },
+  "include": [
+    "env.d.ts",
+    "**/.vitepress/**/*"
+  ]
+}
