--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "devDependencies": {
     "@arco-design/web-vue": "^2.55.1",
     "@arco-plugins/vite-vue": "^1.4.5",
@@ -9,15 +10,15 @@
     "vitepress": "^1.1.4"
   },
   "scripts": {
-    "docs:dev": "vitepress dev --host",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:dev": "node .vitepress/theme/utils/heatmap.data.js && vitepress dev --host",
+    "docs:build": "node .vitepress/theme/utils/heatmap.data.js && vitepress build"
   },
   "dependencies": {
     "@antv/g2plot": "^2.4.31",
     "@giscus/vue": "^3.0.0",
     "@mdit-vue/shared": "^2.1.2",
     "blueimp-md5": "^2.19.0",
+    "cal-heatmap": "^4.2.4",
     "dayjs": "^1.11.11",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
@@ -29,6 +30,9 @@
       "@antv/g-base": "0.5.11",
       "@antv/path-util": "2.0.15",
       "@antv/attr": "0.3.5"
+    },
+    "patchedDependencies": {
+      "cal-heatmap@4.2.4": "patches/cal-heatmap@4.2.4.patch"
     }
   }
 }
