--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Build
-        run: pnpm i && pnpm run docs:build
+        run: pnpm i && pnpm run docs:build && mv heatmap.json dist
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
