--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with: 
+          fetch-depth: 0
           persist-credentials: false
 
       - name: Install PNpm
