--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@giscus/vue": "^3.0.0",
     "@mdit-vue/shared": "^2.1.2",
     "artplayer": "^5.1.6",
+    "autoprefixer": "^10.4.19",
     "blueimp-md5": "^2.19.0",
     "cal-heatmap": "^4.2.4",
     "dayjs": "^1.11.11",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "vite": "^5.2.11",
     "vue": "^3.4.26"
   },
