--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
     "postcss": "^8.4.40",
+    "rss-parser": "^3.13.0",
     "tailwindcss": "^3.4.7",
     "vite": "^5.2.11",
     "vue": "^3.4.26"
