--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build And Deploy
 on:
   workflow_dispatch:
   schedule:
-    - cron: '1 */6 * * *'
+    - cron: '5 0 * * *'
   push:
     branches: 
       - main
